--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <ul id="mobile-nav-list" class="mobile-nav-list">
         
         <li>
-          <a class="mobile-nav-link" href="#">Portfolio</a>
+          <a class="mobile-nav-link" href="#work-section">Portfolio</a>
         </li>
         <li>
-          <a class="mobile-nav-link" href="#">About</a>
+          <a class="mobile-nav-link" href="#abouta-section">About</a>
         </li>
         <li>
-          <a class="mobile-nav-link" href="#">Contact</a>
+          <a class="mobile-nav-link" href="#contacta-section">Contact</a>
         </li>
       </ul>
     </header>
@@ -105,7 +105,9 @@
           </div>
         </div>
       </header>
-      <section class="new-container">
+
+      <!-- Works Section -->
+      <section  id="work-section" class="new-container">
         <div class="image-p">
           <img
             class="image-placeholder"
@@ -205,7 +207,9 @@
           </div>
         </div>
       </section>
-      <section class="about">
+
+      <!-- About Section -->
+      <section  id="abouta-section" class="about">
         <div class="about-me">
           <div class="about-soft">
             <h2 class="about-head">About me</h2>
@@ -256,7 +260,9 @@
           </ul>
         </div>
       </section>
-      <section class="contact">
+
+      <!-- Contact Section -->
+      <section  id="contacta-section" class="contact">
         <div class="form-detail">
           <p>
             I'm always interested in hearing about new projects, so if you'd
