Add id to email imput at index.html file

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               maxlength="30"
               required
             />
-            <input type="email" placeholder="Email address" required />
+            <input id="mail" type="email" placeholder="Email address" required />
             <textarea
               name="msgt1"
               id="t1"
