--- a/index.html
+++ b/index.html
@@ -168,14 +168,13 @@
           <form
             action="https://formspree.io/f/xlezlkyw"
             method="post"
-            class="contact-us"
-          >
+            class="contact-us">
             <input
               type="text"
               placeholder="Full Name"
               maxlength="30"
               required
-            />
+              />
             <input type="email" placeholder="Email address" required />
             <textarea
               name="msgt1"
