Update HTML file adding id tags

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             id="form">
             <input
               type="text"
+              id="name"
               placeholder="Full Name"
               maxlength="30"
               required
