--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <ul id="mobile-nav-list" class="mobile-nav-list">
         
         <li>
-          <a class="mobile-nav-link" href="#work-section">Portfolio</a>
+          <a class="mobile-nav-link" href="#portfolio">Portfolio</a>
         </li>
         <li>
           <a class="mobile-nav-link" href="#abouta-section">About</a>
